openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k4bench-dashboard
  namespace: k4bench
  labels:
    app: k4bench-dashboard
spec:
  selector:
    app: k4bench-dashboard
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
