openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: k4bench-dashboard
  namespace: k4bench
  labels:
    app: k4bench-dashboard
  annotations:
    # Empty string removes the IP whitelist, making the app reachable from the public Internet 
    haproxy.router.openshift.io/ip_whitelist: ""
spec:
  host: k4bench-dashboard.app.cern.ch
  to:
    kind: Service
    name: k4bench-dashboard
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
